--- a/css/style.css
+++ b/css/style.css
@@ -1651,6 +1651,17 @@ h1 {
 	border-radius:4px;
 	-webkit-border-radius:4px;
 }
+.gallery-e .preview .item:not(.current):hover div:after {
+	content:'';
+	position:absolute;
+	left:-2px;
+	top:-2px;
+	width:78px;
+	height:78px;
+	border:3px solid #f58220;
+	border-radius:4px;
+	-webkit-border-radius:4px;
+}
 .gallery-e .preview .item > div {
 	position:relative;
 	width:80px;
