--- a/css/style.css
+++ b/css/style.css
@@ -2948,8 +2948,20 @@ h1 {
 	background:#9cb5c6;
 }
 .photo-l li div a {
+	position:relative;
 	display:block;
 	height:147px;
+}
+.photo-l li div a:hover:after {
+	content:'';
+	position:absolute;
+	left:-2px;
+	top:-2px;
+	width:214px;
+	height:145px;
+	border:3px solid #f58220;
+	border-radius:4px;
+	-webkit-border-radius:4px;
 }
 .photo-l h6 {
 	font-size:14px;
