--- a/css/style.css
+++ b/css/style.css
@@ -1576,8 +1576,43 @@ h1 {
 	-webkit-box-shadow:0 5px 15px rgba(0,0,0,0.1);
 }
 .gallery-e .main {
+	position:relative;
 	width:660px;
 	height:440px;
+}
+
+.gallery-e .main .slick-prev, .gallery-e .main .slick-next {
+	position:absolute;
+	top:50%;
+	z-index:5;
+	display:block;
+	width:30px;
+	height:45px;
+	cursor:pointer;
+	margin-top:-22px;
+	background-color:rgba(255,255,255,.8);
+	background-image:url('../img/gallery-arrows.png');
+	background-repeat:no-repeat;
+	border:1px solid #f58220;
+	border-radius:5px;
+	-webkit-border-radius:5px;
+}
+.gallery-e .main .slick-prev {
+	left:10px;
+	background-position:left top;
+}
+..gallery-e .main .slick-prev:hover {
+	background-position:left bottom;
+}
+.gallery-e .main .slick-next {
+	right:20px;
+	background-position:right top;
+}
+.gallery-e .main .slick-next:hover {
+	background-position:right bottom;
+}
+.gallery-e .main .slick-prev:hover, .gallery-e .main .slick-next:hover {
+	background-color:#f58220;
 }
 .gallery-e .main .item {
 	height:440px;
